--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # API Keys
 NEXT_PUBLIC_API_URL=http://localhost:3000
-GOOGLE_VISION_API_KEY=your_google_vision_api_key
-GOOGLE_SEARCH_ENGINE_ID=your_google_search_engine_id
+GOOGLE_VISION_API_KEY=votre_clé_ici
+GOOGLE_CUSTOM_SEARCH_API_KEY=votre_clé_ici
+GOOGLE_CUSTOM_SEARCH_ENGINE_ID=votre_id_ici
